[package]
name = "bevy_iced"
version = "0.5.0"
edition = "2021"
description = "Iced integration for Bevy"
authors = ["tasgon <me@tas.sh>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "iced", "ui", "game", "gui"]
homepage = "https://github.com/tasgon/bevy_iced"
repository = "https://github.com/tasgon/bevy_iced"
documentation = "https://docs.rs/bevy_iced"

[dependencies]
bevy_app = "0.15"
bevy_derive = "0.15"
bevy_ecs = "0.15"
bevy_input = "0.15"
bevy_math = "0.15"
bevy_render = "0.15"
bevy_utils = "0.15"
bevy_window = "0.15"

iced_core = { git = "https://github.com/Azorlogh/iced", rev = "47af5890d8cf80b8bfd5909eee1ef3b1d5c05421" }
iced_runtime = { git = "https://github.com/Azorlogh/iced", rev = "47af5890d8cf80b8bfd5909eee1ef3b1d5c05421" }
iced_wgpu = { git = "https://github.com/Azorlogh/iced", rev = "47af5890d8cf80b8bfd5909eee1ef3b1d5c05421" }
iced_widget = { git = "https://github.com/Azorlogh/iced", rev = "47af5890d8cf80b8bfd5909eee1ef3b1d5c05421" }
iced_renderer = { git = "https://github.com/Azorlogh/iced", features = ["wgpu"], rev = "47af5890d8cf80b8bfd5909eee1ef3b1d5c05421" }

[dev-dependencies]
bevy = "0.15"
rand = "0.8"
